[package]
name = "mediator"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
rumqttd = { path = "libs/rumqtt/rumqttd" }
serde_json = "1.0.132"
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
r2d2_sqlite = "0.26.0"
r2d2 = "0.8.10"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
